Fixed lenis scrol on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,6 @@
 }
 
 html{
-  overflow: hidden;
   background-color: var(--darkgrey);
   scroll-padding-top: 60px;
 }
@@ -27,7 +26,7 @@ code {
   font-family: 'JosefinSans'
 }
 
-Lenis recommended CSS
+/* Lenis recommended CSS */
 html.lenis {
   height: auto;
 }
